--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   application:
     name: courier
   datasource:
-    url: jdbc:postgresql://localhost:5436/courierdb
-    password: postgres
-    username: postgres
+    url: jdbc:postgresql://${POSTGRES_URL:localhost:5436}/courierdb
+    password: ${POSTGRES_PASS:postgres}
+    username: ${POSTGRES_USER:postgres}
   cloud:
     function:
       definition: shipment;updateShipment
@@ -19,7 +19,7 @@ spring:
             autoCommitOnError: true
             autoCommitOffset: true
         binder:
-          brokers: localhost:9092
+          brokers: ${KAFKA_BROKER:localhost:9092}
           minPartitionCount: 4
           autoAddPartitions: true
           consumerProperties:
